--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 1.0.1
 homepage: https://github.com/gucodero/culqi_flutter
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  email_validator: '^1.0.0'
-  http: ^0.12.0+4
+  email_validator: '^2.0.1'
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
